chargement différé des deux images du slider.

--- a/ninacarducci.github.io-main/index.html
+++ b/ninacarducci.github.io-main/index.html
@@ -81,6 +81,7 @@
               src="./assets/images/slider/concert_crowd.jpg"
               class="d-block w-100"
               alt="..."
+              loading="lazy"
             />
           </div>
           <div class="carousel-item">
@@ -88,6 +89,7 @@
               src="./assets/images/slider/wedding_dance.jpg"
               class="d-block w-100"
               alt="..."
+              loading="lazy"
             />
           </div>
         </div>
