Optimisation des images et ajout de plusieurs version d'image en fonction du device utilisé

--- a/ninacarducci.github.io-main/index.html
+++ b/ninacarducci.github.io-main/index.html
@@ -19,6 +19,9 @@
     ></script>
     <script src="./assets/maugallery.min.js" defer></script>
     <script src="./assets/scripts.min.js" async></script>
+    <title>
+      Photographe passionné : Immortaliser vos moments de bonheur et d'émotion
+    </title>
   </head>
   <header>
     <div class="top-header">
@@ -164,21 +167,44 @@
               data-gallery-tag="Concert"
               class="gallery-item"
               src="./assets/images/gallery/concerts/stage_picture_from_crowd.jpg"
+              srcset="
+                ./assets/images/gallery/concerts/stage_picture_from_crowd_small.webp 320w,
+                ./assets/images/gallery/concerts/stage_picture_from_crowd_large.webp 440w
+              "
+              sizes="(max-width: 440px) 320px, 440px"
+              loading="lazy"
             />
             <img
               data-gallery-tag="Entreprises"
               class="gallery-item"
               src="./assets/images/gallery/entreprise/businessman_picture.jpg"
+              srceset="
+                ./assets/images/gallery/entreprise/businessman_picture_small.webp 320w,
+                ./assets/images/gallery/entreprise/businessman_picture_large.webp 440w"
+              sizes="(max-width: 440px) 320px, 440px"
+              loading="lazy"
             />
             <img
               data-gallery-tag="Entreprises"
               class="gallery-item"
               src="./assets/images/gallery/entreprise/team_building_picture.jpg"
+              srcset="
+                ./assets/images/gallery/entreprise/team_building_picture_small.webp 320w,
+                ./assets/images/gallery/entreprise/team_building_picture_large.webp 440w
+              "
+              sizes="(max-width: 440px) 320px, 440px"
+              loading="lazy"
             />
             <img
               data-gallery-tag="Mariages"
               class="gallery-item"
               src="./assets/images/gallery/mariage/holding_hands.jpg"
+              srcset="
+                .assets/images/gallery/mariage/holding_hands_small.webp  320w,
+                ./assets/images/gallery/mariage/holding_hands_large.webp 440w
+              "
+              sizes="(max-width: 440px) 320px, 440px"
+              loading="lazy"
             />
             <img
               data-gallery-tag="Portrait"
@@ -188,13 +214,19 @@
                 ./assets/images/gallery/portraits/eyes_closed_picture_small.webp 320w,
                 ./assets/images/gallery/portraits/eyes_closed_picture_large.webp 440w
               "
-              sizes="(max-width: 600px) 320px, 440px"
+              sizes="(max-width: 440px) 320px, 440px"
               loading="lazy"
             />
             <img
               data-gallery-tag="Mariages"
               class="gallery-item"
               src="./assets/images/gallery/mariage/laughing_married.jpg"
+              srcset="
+                .assets/images/gallery/mariage/laughing_married_small.webp  320w,
+                ./assets/images/gallery/mariage/laughing_married_large.webp 440w
+              "
+              sizes="(max-width: 440px) 320px, 440px"
+              loading="lazy"
             />
             <img
               data-gallery-tag="Portrait"
@@ -204,18 +236,28 @@
                 ./assets/images/gallery/portraits/through_wire_mesh_picture_small.webp 320w,
                 ./assets/images/gallery/portraits/through_wire_mesh_picture_large.webp 440w
               "
-              sizes="(max-width: 600px) 320px, 440px"
+              sizes="(max-width: 440px) 320px, 440px"
               loading="lazy"
             />
             <img
               data-gallery-tag="Concert"
               class="gallery-item"
               src="./assets/images/gallery/concerts/singer_on_stage.jpg"
+              srceset="
+                ./assets/images/gallery/concerts/singer_on_stage_small.webp 320w,
+                ./assets/images/gallery/concerts/singer_on_stage_large.webp 440w"
+              sizes="(max-width: 440px) 320px, 440px"
+              loading="lazy"
             />
             <img
               data-gallery-tag="Entreprises"
               class="gallery-item"
               src="./assets/images/gallery/entreprise/laughing_office_worker.jpg"
+              srceset="
+                ./assets/images/gallery/entreprise/laughing_office_worker_small.webp 320w,
+                ./assets/images/gallery/entreprise/laughing_office_worker_large.webp 440w"
+              sizes="(max-width: 440px) 320px, 440px"
+              loading="lazy"
             />
           </div>
         </div>
