Optimisation du SEO du site web grâce au meta description, balises alt des images et du title

--- a/ninacarducci.github.io-main/index.html
+++ b/ninacarducci.github.io-main/index.html
@@ -11,6 +11,10 @@
       rel="stylesheet"
     />
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Découvrez l'univers d'un photographe passionné : une galerie immersive pour explorer différents thèmes photographiques, une brève présentation personnelle, et une section contact pour échanger et réserver vos séances. Naviguez facilement à travers des images captivantes, agrandissez-les pour les apprécier pleinement, et laissez-vous inspirer par un regard unique qui immortalise vos moments de bonheur et d'émotion."
+    />
     <script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -38,7 +42,9 @@
                 class="social-link"
                 href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
                 target="_blank"
-                ><img src="assets/images/logo_instagram.png" alt=""
+                ><img
+                  src="assets/images/logo_instagram.png"
+                  alt="Logo Instagram"
               /></a>
             </li>
           </ul>
@@ -80,7 +86,7 @@
               srcset="./assets/images/slider/walking_roads_large.webp 1440w"
               sizes="(max-width: 1440px), 1440px"
               class="d-block w-100"
-              alt="..."
+              alt="Un homme qui traverse la route sur un passage piéton"
             />
           </div>
           <div class="carousel-item">
@@ -89,7 +95,7 @@
               srcset="./assets/images/slider/concert_crowd_large.webp 1440w"
               sizes="(max-width: 1440px), 1440px"
               class="d-block w-100"
-              alt="..."
+              alt="Une foule absorbée par un concert"
               loading="lazy"
             />
           </div>
@@ -99,7 +105,7 @@
               srcset="./assets/images/slider/wedding_dance_large.webp 1440w"
               sizes="(max-width: 1440px), 1440px"
               class="d-block w-100"
-              alt="..."
+              alt="Un couple qui danse lors d'un mariage"
               loading="lazy"
             />
           </div>
@@ -136,6 +142,7 @@
               ./assets/images/picture_nina_small.webp 460w
             "
             sizes="(max-width: 460px) 460px"
+            alt="Photo de Nina Carducci"
           />
         </div>
         <div id="about-me">
@@ -173,6 +180,7 @@
               "
               sizes="(max-width: 440px) 320px, 440px"
               loading="lazy"
+              alt="Photo d'un concert vue depuis la foule"
             />
             <img
               data-gallery-tag="Entreprises"
@@ -183,6 +191,7 @@
                 ./assets/images/gallery/entreprise/businessman_picture_large.webp 440w"
               sizes="(max-width: 440px) 320px, 440px"
               loading="lazy"
+              alt="Portrait d'un homme d'affaire aux bras croisés"
             />
             <img
               data-gallery-tag="Entreprises"
@@ -194,6 +203,7 @@
               "
               sizes="(max-width: 440px) 320px, 440px"
               loading="lazy"
+              alt="Photo d'une équipe en team building"
             />
             <img
               data-gallery-tag="Mariages"
@@ -205,6 +215,7 @@
               "
               sizes="(max-width: 440px) 320px, 440px"
               loading="lazy"
+              alt="Photo de deux mains qui se tiennent"
             />
             <img
               data-gallery-tag="Portrait"
@@ -216,6 +227,7 @@
               "
               sizes="(max-width: 440px) 320px, 440px"
               loading="lazy"
+              alt="Photo d'un portrait avec les yeux fermés"
             />
             <img
               data-gallery-tag="Mariages"
@@ -227,6 +239,7 @@
               "
               sizes="(max-width: 440px) 320px, 440px"
               loading="lazy"
+              alt="Photo de mariés qui rient mains dans la main"
             />
             <img
               data-gallery-tag="Portrait"
@@ -238,6 +251,7 @@
               "
               sizes="(max-width: 440px) 320px, 440px"
               loading="lazy"
+              alt="Photo d'un portrait à travers une grille"
             />
             <img
               data-gallery-tag="Concert"
@@ -248,6 +262,7 @@
                 ./assets/images/gallery/concerts/singer_on_stage_large.webp 440w"
               sizes="(max-width: 440px) 320px, 440px"
               loading="lazy"
+              alt="Photo d'un chanteur sur scène"
             />
             <img
               data-gallery-tag="Entreprises"
@@ -258,6 +273,7 @@
                 ./assets/images/gallery/entreprise/laughing_office_worker_large.webp 440w"
               sizes="(max-width: 440px) 320px, 440px"
               loading="lazy"
+              alt="Photo d'un employé de bureau qui rit"
             />
           </div>
         </div>
@@ -364,6 +380,7 @@
             src="./assets/images/picture_camera.png"
             srcset="./assets/images/picture_camera_small.webp 430w"
             sizes="(max-width: 430px) 430px"
+            alt="Photo d'un appareil photo"
           />
         </div>
       </div>
