intégration des microdonnées du client pour le référencement local

--- a/ninacarducci.github.io-main/index.html
+++ b/ninacarducci.github.io-main/index.html
@@ -15,6 +15,17 @@
       name="description"
       content="Découvrez l'univers d'un photographe passionné : une galerie immersive pour explorer différents thèmes photographiques, une brève présentation personnelle, et une section contact pour échanger et réserver vos séances. Naviguez facilement à travers des images captivantes, agrandissez-les pour les apprécier pleinement, et laissez-vous inspirer par un regard unique qui immortalise vos moments de bonheur et d'émotion."
     />
+    <meta property="og:title" content="Nina Carducci" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ninacarducci.github.io/" />
+    <meta
+      property="og:image"
+      content="https://ninacarducci.github.io/assets/images/picture_nina.png"
+    />
+    <meta
+      property="og:description"
+      content="Photographe passionné : mon objectif est d'immortaliser vos moments de bonheur et d'émotions"
+    />
     <script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -382,6 +393,31 @@
             sizes="(max-width: 430px) 430px"
             alt="Photo d'un appareil photo"
           />
+        </div>
+      </div>
+    </div>
+    <div
+      itemscope
+      itemtype="http://schema.org/LocalBusiness"
+      aria-hidden="true"
+    >
+      <span itemprop="Name">Nina Carducci</span>
+      <div
+        itemprop="address"
+        itemscope
+        itemtype="http://schema.org/PostalAddress"
+      >
+        <span itemprop="streetAddress">68 avenue Alsace-Lorraine</span>
+        <span itemprop="postalCode">33200</span>
+        <span itemprop="addressLocality">Bordeaux</span>
+        <span itemprop="addressRegion">Bordeaux</span>
+      </div>
+      <div itemprop="telephone">05 56 67 78 89</div>
+      <div itemprop="openingHours">Lundi au vendredi de 10h à 19h</div>
+      <div itemprop="sameAs">
+        https://www.instagram.com/ninacarducci.photo/?hl=fr
+        <div itemprop="image">
+          https://ninacarducci.github.io/assets/images/picture_nina.png
         </div>
       </div>
     </div>
