--- a/ninacarducci.github.io-main/index.html
+++ b/ninacarducci.github.io-main/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css" />
@@ -40,7 +40,7 @@
   </head>
   <header>
     <div class="top-header">
-      <h3 class="name">Nina Carducci</h3>
+      <h1 class="name">Nina Carducci</h1>
       <nav>
         <div class="nav">
           <ul>
@@ -157,13 +157,13 @@
           />
         </div>
         <div id="about-me">
-          <h3 class="about-me__title">A propos de moi</h3>
-          <h6 class="about-me__introduction">
+          <h2 class="about-me__title">A propos de moi</h2>
+          <h3 class="about-me__introduction">
             Devenir photographe était pour moi une évidence. Comme si j’y étais
             prédestiné. Saisir un moment, une émotion, une situation, un
             endroit, une lumière et les rendre immortels, voilà ce qui me fait
             vibrer.
-          </h6>
+          </h3>
           <p>
             Nous passons notre vie à chercher le bonheur, et lorsque nous y
             touchons, nous n’avons qu’une envie : le figer au travers de
@@ -197,9 +197,10 @@
               data-gallery-tag="Entreprises"
               class="gallery-item"
               src="./assets/images/gallery/entreprise/businessman_picture.jpg"
-              srceset="
+              srcset="
                 ./assets/images/gallery/entreprise/businessman_picture_small.webp 320w,
-                ./assets/images/gallery/entreprise/businessman_picture_large.webp 440w"
+                ./assets/images/gallery/entreprise/businessman_picture_large.webp 440w
+              "
               sizes="(max-width: 440px) 320px, 440px"
               loading="lazy"
               alt="Portrait d'un homme d'affaire aux bras croisés"
@@ -268,9 +269,10 @@
               data-gallery-tag="Concert"
               class="gallery-item"
               src="./assets/images/gallery/concerts/singer_on_stage.jpg"
-              srceset="
+              srcset="
                 ./assets/images/gallery/concerts/singer_on_stage_small.webp 320w,
-                ./assets/images/gallery/concerts/singer_on_stage_large.webp 440w"
+                ./assets/images/gallery/concerts/singer_on_stage_large.webp 440w
+              "
               sizes="(max-width: 440px) 320px, 440px"
               loading="lazy"
               alt="Photo d'un chanteur sur scène"
@@ -279,9 +281,10 @@
               data-gallery-tag="Entreprises"
               class="gallery-item"
               src="./assets/images/gallery/entreprise/laughing_office_worker.jpg"
-              srceset="
+              srcset="
                 ./assets/images/gallery/entreprise/laughing_office_worker_small.webp 320w,
-                ./assets/images/gallery/entreprise/laughing_office_worker_large.webp 440w"
+                ./assets/images/gallery/entreprise/laughing_office_worker_large.webp 440w
+              "
               sizes="(max-width: 440px) 320px, 440px"
               loading="lazy"
               alt="Photo d'un employé de bureau qui rit"
@@ -304,7 +307,7 @@
         </div>
       </div>
       <div id="services">
-        <h3 class="title">Mes services</h3>
+        <h2 class="title">Mes services</h2>
         <div class="container">
           <div class="service">
             <div class="service__description">
@@ -367,19 +370,19 @@
     <div id="contact">
       <div class="container">
         <div class="form-container">
-          <h3>Une question ? Une demande de devis ?</h3>
+          <h2>Une question ? Une demande de devis ?</h2>
           <p>
             N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures
           </p>
           <form action="" method="post">
-            <label>Nom</label>
-            <input type="text" name="nom" id="nom" />
-            <label>Email</label>
-            <input type="email" name="email" id="email" />
-            <label>Message</label>
+            <label for="Nom">Nom</label>
+            <input type="text" name="Nom" id="Nom" />
+            <label for="Email">Email</label>
+            <input type="email" name="Email" id="Email" />
+            <label for="Message">Message</label>
             <textarea
-              name="message"
-              id="message"
+              name="Message"
+              id="Message"
               cols="30"
               rows="10"
             ></textarea>
@@ -399,7 +402,7 @@
     <div
       itemscope
       itemtype="http://schema.org/LocalBusiness"
-      aria-hidden="true"
+      style="display: none"
     >
       <span itemprop="Name">Nina Carducci</span>
       <div
