--- a/ninacarducci.github.io-main/index.html
+++ b/ninacarducci.github.io-main/index.html
@@ -15,6 +15,7 @@
       name="description"
       content="Découvrez l'univers d'un photographe passionné : une galerie immersive pour explorer différents thèmes photographiques, une brève présentation personnelle, et une section contact pour échanger et réserver vos séances. Naviguez facilement à travers des images captivantes, agrandissez-les pour les apprécier pleinement, et laissez-vous inspirer par un regard unique qui immortalise vos moments de bonheur et d'émotion."
     />
+    <!-- Balises Meta OG-->
     <meta property="og:title" content="Nina Carducci" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://ninacarducci.github.io/" />
@@ -26,6 +27,19 @@
       property="og:description"
       content="Photographe passionné : mon objectif est d'immortaliser vos moments de bonheur et d'émotions"
     />
+    <!-- Balises Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Nina Carducci" />
+    <meta
+      name="twitter:description"
+      content="Photographe passionné : mon objectif est d'immortaliser vos moments de bonheur et d'émotions"
+    />
+    <meta
+      name="twitter:image"
+      content="https://ninacarducci.github.io/assets/images/picture_nina.png"
+    />
+    <meta name="twitter:site" content="@VotreNomUtilisateurTwitter" />
+    <meta name="twitter:creator" content="@VotreNomUtilisateurTwitter" />
     <script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -35,7 +49,7 @@
     <script src="./assets/maugallery.min.js" defer></script>
     <script src="./assets/scripts.min.js" async></script>
     <title>
-      Photographe passionné : Immortaliser vos moments de bonheur et d'émotion
+      Photographe passionnée : Immortaliser vos moments de bonheur et d'émotions
     </title>
   </head>
   <header>
